--- a/myproject/templates/recipe-details.html
+++ b/myproject/templates/recipe-details.html
@@ -1,68 +1,57 @@
 {% extends 'base.html' %}
 
 {% block body %}
+{% for tag, msg in get_flashed_messages(with_categories=True) %}
+<div class="alert alert-success" role="alert">
+    {{msg}}
+  </div>
+{% endfor %}
 <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 my-4">
-    <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand" href="https://getbootstrap.com/docs/4.4/examples/navbars/#">Ingredients</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
-            aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsExample01">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link">Bread (2)</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Tomato (3)</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link">Potato (3)</a>
-                </li>
-
-
-            </ul>
-
-        </div>
-    </nav>
-    <h1 class="text-center my-2">Paneer Tikka</h1>
-
+    
+    <h1 class="text-center my-2">{{name}}</h1>
+    <h2 class="my-2">Ingredients</h2>
+    <ul>
+        {% for ing in ingredients %}
+        <li>{{ing}}</li>
+        {% endfor %}
+    </ul>
+    
+    <h2 class="my-2">Steps</h2>
     <div class="list-group my-4">
+        {% for step in steps %}
         <a  class="list-group-item list-group-item-action">
           <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">List group item heading</h5>
+            <h5 class="mb-1">Step {{loop.index
+                }}</h5>
           </div>
-          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+          <p class="mb-1">{{step}}</p>
         </a>
-        <a  class="list-group-item list-group-item-action">
-          <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">List group item heading</h5>
-          </div>
-          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-        </a>
-        <a  class="list-group-item list-group-item-action">
-          <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">List group item heading</h5>
-          </div>
-          <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-        </a>
+        {% endfor %}
+        
       </div>
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            
+            {% for image in images %}
+                {% if loop.index==1 %}
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                {% else %}
+                <li data-target="#carouselExampleCaptions" data-slide-to="{{loop.index-1}}"></li>
+                {% endif %}
+            {% endfor %}
         </ol>
         <div class="carousel-inner">
+            {% for image in images %}
+                {% if loop.index==1 %}
             <div class="carousel-item active">
-                <img src="{{ url_for('static' ,filename='1.jpg') }}" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-                </div>
-            </div>
+                {% else %}
             <div class="carousel-item">
+                {% endif %}
+                <img src="/{{image}}" class="d-block w-100" alt="...">
+                
+            </div>
+            {% endfor %}
+            <!-- <div class="carousel-item">
                 <img src="{{ url_for('static' ,filename='2.jpg') }}" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
@@ -76,6 +65,13 @@
                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
                 </div>
             </div>
+            <div class="carousel-item">
+                <img src="{{ url_for('static' ,filename='4.jpg') }}" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                </div>
+            </div> -->
         </div>
         <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -86,9 +82,8 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+    <a href="/edit/{{id}}"><span class="btn btn-primary my-4">Edit Recipe</span></a>
 </div>
 
-
-
-
+</div>
 {% endblock %}
