--- a/myproject/templates/recipe-list.html
+++ b/myproject/templates/recipe-list.html
@@ -1,29 +1,22 @@
 {% extends 'base.html' %}
 
 {% block body %}
+{% for tag, msg in get_flashed_messages(with_categories=True) %}
+<div class="alert alert-success" role="alert">
+    {{msg}}
+  </div>
+{% endfor %}
 <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-3 my-4">
 
     <ul class="list-group">
+        {% for recipe in list_of_recipes %}
         <li class="list-group-item d-flex justify-content-between">
-            <div><a href="" target="_blank">Cras justo odio</a></div>
-            <div><img src="{{ url_for('static', filename='1.jpg') }}" alt="" class="img-fluid" style="max-width:70px;"></div>
+            <div><a href="/recipe/{{recipe[0]}}" target="_blank">{{recipe[1]}}</a></div>
+            <div><img src="{{recipe[2]}}" alt="" class="img-fluid" style="max-width:70px;">
+            </div>
         </li>
-        <li class="list-group-item d-flex justify-content-between">
-            <div><a href="" target="_blank">Dapibus ac facilisis in</a></div>
-            <div><img src="{{ url_for('static', filename='1.jpg') }}" alt="" class="img-fluid" style="max-width:70px;"></div>
-        </li>
-        <li class="list-group-item d-flex justify-content-between">
-            <div><a href="" target="_blank">Morbi leo risus</a></div>
-            <div><img src="{{ url_for('static', filename='1.jpg') }}" alt="" class="img-fluid" style="max-width:70px;"></div>
-        </li>
-        <li class="list-group-item d-flex justify-content-between">
-            <div><a href="" target="_blank">Porta ac consectetur ac</a></div>
-            <div><img src="{{ url_for('static', filename='1.jpg') }}" alt="" class="img-fluid" style="max-width:70px;"></div>
-        </li>
-        <li class="list-group-item d-flex justify-content-between">
-            <div><a href="" target="_blank">Vestibulum at eros</a></div>
-            <div><img src="{{ url_for('static', filename='1.jpg') }}" alt="" class="img-fluid" style="max-width:70px;"></div>
-        </li>
+        {% endfor %}
+        
     </ul>
 </div>
 
